<resources>
    <string name="app_name">我要修车网</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="sweep">扫一扫</string>
    <string name="search_hint">输入关键字搜索</string>
    <string name="message">消息</string>

    <string name="tab_home">首页</string>
    <string name="tab_zhuangxiu">我要装修</string>
    <string name="tab_shop">商城</string>
    <string name="tab_study">学装修</string>
    <string name="tab_mine">我的</string>
    <string name="title_activity_main">我要修车网</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- 找回密码 -->
    <string name="forget_password">忘记密码</string>
    <string name="Send_verification_code">发送验证码</string>
    <string name="phone_number">手机号</string>
    <string name="input_phone">输入手机号</string>
    <string name="identifying_code">验证码</string>
    <string name="input_the_valide">输入收到的验证码</string>
    <string name="next_step">下一步</string>
    <string name="new_password">新密码</string>
    <string name="mind_o">请输入新密码</string>
    <string name="repeat">再次输入</string>
    <string name="new_re_password">请于新密码输入一致</string>
    <string name="complete">完成</string>
    <string name="confirm">确认</string>
    <!-- 找回密码 -->
    <string name="my_head">我的头像</string>
    <string name="name">姓名</string>
    <string name="show">显示</string>
    <string name="my_shipping_address">我的收货地址</string>
    <string name="scan_the_qr_code_to_share">扫描二维码关注</string>
    <string name="my_qr_code_to_share">扫描二维码关注</string>
    <string name="user_name">用户名</string>
    <string name="_13xxxxxxx00">13xxxxxxx00</string>


    <string name="orderllist_sale_price">￥%1$s</string>
    <string name="orderllist_yunfei">(%1$s)</string>
    <string name="orderllist_goodstotalnum">共有%1$d件商品，合计:</string>

    <string name="orderno">(订单号:%1$s)</string>
    <string name="fenlei">分类</string>
    <string name="login_text">*可用马潭易购、移动门店账户直接登录</string>

    <string name="no_data">没有找到符合条件的数据</string>

    <string name="input_city_name">输入城市名或拼音</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>

    <!-- 二维码 -->
    <string name="towdcode_tip">请将二维码／条码放入框中</string>
    <string name="put_code_in_frame">请将条码置于取景框内扫描。</string>
    <string name="local_scan">本地扫描</string>

    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
</resources>
