<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <SurfaceView
        android:id="@+id/surfaceview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </SurfaceView>

    <com.clown.wyxc.zxing.view.ViewfinderView
        android:id="@+id/viewfinderview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00000000" />
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       	style="@style/white.16"
       	android:layout_marginTop="60dp"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:text="@string/towdcode_tip"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:text="@string/put_code_in_frame"
        android:textSize="15sp" >
    </TextView>
    
    <TextView
        android:id="@+id/capture_tv_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/white.16"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/local_scan" >
    </TextView>

</RelativeLayout>