<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_ll"
    android:orientation="vertical"
    android:background="#F3F3F3">

    <View
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#E5E5E5"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        android:gravity="center_vertical"
        >

        <TextView
            android:id="@+id/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/identifying_code"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/input_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/input_the_valide"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:ems="10"
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#E5E5E5"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_resend"
        android:text="60秒后重新发送"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#F3F3F3" >

        <Button
            android:id="@+id/loadpaypass_btn_commit"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/next_step"
            android:background="@color/blue_6b"
            android:textSize="20sp"
            android:textColor="#FFFFFF" />

    </RelativeLayout>

</LinearLayout>