<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main_ll"
    android:background="@color/gray_theme">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">
        <LinearLayout
            android:id="@+id/nead_shot"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="@drawable/shape_corners"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center_vertical"
                android:padding="20dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@mipmap/ic_person"
                    android:id="@+id/iv_head" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    style="@style/gray33.24"
                    android:layout_alignTop="@+id/iv_head"
                    android:layout_toRightOf="@+id/iv_head"
                    android:layout_toEndOf="@+id/iv_head"
                    android:layout_marginLeft="40dp"
                    android:id="@+id/tv_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    style="@style/gray99.20"
                    android:layout_alignBottom="@+id/iv_head"
                    android:layout_alignLeft="@+id/tv_name"
                    android:layout_alignStart="@+id/tv_name"
                    android:id="@+id/tv_phone" />

                <TextView
                    android:id="@+id/tv_show"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show"
                    style="@style/gray99.20"
                    android:layout_alignBottom="@+id/tv_phone"
                    android:layout_toRightOf="@+id/tv_phone"
                    android:layout_toEndOf="@+id/tv_phone"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp" />
            </RelativeLayout>

            <FrameLayout
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:background="@drawable/stroke_gray"
                android:padding="4dp">
                <ImageView
                    android:id="@+id/iv_qr_code"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"/>

                <ImageView
                    android:id="@+id/fl_iv_head"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"/>
            </FrameLayout>

            <TextView
                android:id="@+id/tv_sacn_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/scan_the_qr_code_to_share"
                style="@style/gray88.20"/>

            <ImageView
                android:id="@+id/save_to_share"
                android:layout_width="270dp"
                android:layout_height="62dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/savetoshare_pictures"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
