<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray_theme">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        >

        <TextView
            android:id="@+id/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/phone_number"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/input_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/input_phone"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"

            android:background="@null"
            android:ems="10"
            android:inputType="phone" >

            <requestFocus />
        </EditText>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#E5E5E5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/linearlayout01" >

            <EditText
                android:id="@+id/et_phoneCodes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:hint="请输入右侧验证码" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_showCode"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp" >

        <Button
            android:id="@+id/rebackpass_btn_commit"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/Send_verification_code"
            android:background="@color/blue_6b"
            android:textSize="20sp"
            android:textColor="#FFFFFF" />

    </RelativeLayout>
</LinearLayout>
