<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_ll"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_theme">

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_ce"/>
    <RelativeLayout
        android:id="@+id/head_rl"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/white"
        android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_head"
                style="@style/gray33.18"
                android:id="@+id/textView2"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"/>

            <com.clown.wyxc.components.CircleImageView
                android:id="@+id/head_iv"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@mipmap/ic_person"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/imageView2"
                android:layout_toStartOf="@+id/imageView2"
                android:layout_marginRight="10dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/arrow_right"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/imageView2" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_ce"/>
    <RelativeLayout
        android:id="@+id/name_ll"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            style="@style/gray33.18"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:id="@+id/textView" />
        <TextView
            android:id="@+id/name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_centerVertical="true"
            style="@style/gray33.18"
            android:layout_marginLeft="20dp"
            android:layout_toLeftOf="@+id/imageView4"/>
        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/arrow_right"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_ce"/>

    <RelativeLayout
        android:id="@+id/my_qrcode_rl"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_qr_code_to_share"
            style="@style/gray33.18"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp" />
        <ImageView
            android:id="@+id/my_qrcode_tv"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/qrcodegray"
            android:layout_centerVertical="true"
            style="@style/gray33.18"
            android:layout_marginLeft="20dp"
            android:layout_toLeftOf="@+id/imageView5"/>
        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/arrow_right"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_ce"/>

    <RelativeLayout
        android:id="@+id/address_rl"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white"
        android:layout_gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_shipping_address"
            style="@style/gray33.18"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/arrow_right"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/imageView3" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_ce"/>
</LinearLayout>